<resources>
    <string name="app_name">ECommerceNikeStore</string>
    <string name="home">خانه</string>
    <string name="cart">سبد خرید</string>
    <string name="profile">پروفایل</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comments">کامنت ها</string>
    <string name="seeAllComments">مشاهده همه نظرات</string>
    <string name="product_information">کفش واژه‌ای پارسی است که در پارسی میانه نیز به همین صورت «کفش» بوده‌است. به سازنده و تعمیرکنندهٔ کفش، کفش‌گر یا کَفّاش گفته می‌شود. کفاش به قیاس کلمه‌های عربی ساخته شده‌است و در منابع کهن‌تر فارسی نظیر شاهنامه لفظ کفش‌گر به کار رفته‌است. کَفش یا موزه (رایج در فارسی افغانستان) پاافزاری است برای محافظت و راحتی پای آدم به هنگام انجام کارهای گوناگون. پای آدم دارای استخوان‌های بیشتری نسبت به هر اندام دیگری از بدن می‌باشد و در برابر خطرهای محیطی همچون سنگ‌های تیز و زمین داغ آسیب‌پذیر است که کفش در برابر این آسیب‌ها از پا محافظت می‌کند. طراحی کفش‌ها در طول زمان تغییرات بسیاری پیدا کرده، که ظاهر آن در اصل با کارکرد آن بستگی داشته‌است. کفش‌های امروزی در شیوه، پیچیدگی و هزینه تفاوت گسترده‌ای دارند. امروزه در طراحی کفش‌ها جنبهٔ آراستگی آن نیز در نظر گرفته می‌شود.</string>
    <string name="sort">مرتب سازی</string>
    <string name="productList">لیست محصولات</string>
    <string name="latest">جدید ترین</string>
    <string name="popular">محبوب ترین</string>
    <string name="lessCost">ارزان ترین</string>
    <string name="mustCost">گران ترین</string>
    <string name="grid">grid</string>
    <string name="addToCart">افزودن به سبد خرید</string>
    <string name="haveNotAccount">حساب کاربری ندارید؟</string>
    <string name="signUp">ثبت نام</string>
    <string name="nike">nike</string>
    <string name="loginHint">قبلا ثبت نام کردید؟</string>
    <string name="enterEmailAndPassword">ایمیل و رمزعبور خود را وارد کنید</string>
    <string name="email">ایمیل</string>
    <string name="password">رمز عبور</string>
    <string name="loginTitleBtn">ورود</string>
    <string name="createAccount">ایجاد حساب کاربری</string>
    <string name="loginToAccount">ورود به حساب کاربری</string>
    <string name="shopping_cart">سبدخرید</string>
    <string name="payment">پرداخت</string>
    <string name="count">تعداد</string>
    <string name="purchaseDetail">جزئیات خرید</string>
    <string name="totalPrice">قیمت کل</string>
    <string name="shippingCost">هزینه ارسال</string>
    <string name="payablePrice">مبلغ قابل پرداخت</string>
    <string name="pleaseLogInAccount">لطفا وارد حساب کاربری شوید</string>
    <string name="enterToAccount">ورود به حساب کاربری</string>
    <string name="cartIsEmpty">سبد خرید خالی است</string>
    <string name="onlinePayment">پرداخت اینترنتی</string>
    <string name="cashOnDelivery">پرداخت در محل</string>
    <string name="address">آدرس</string>
    <string name="phoneNumber">تلفن همراه</string>
    <string name="zipCode">کد پستی</string>
    <string name="lastName">نام خانوادگی</string>
    <string name="shippingToolbarTitle">پرداخت</string>
    <string name="firstName">نام</string>
    <string name="orderHistory">سوابق سفارش</string>
    <string name="returnToHome">برگشت به صفحه اصلی</string>
    <string name="price">قیمت</string>
    <string name="purchaseStatus">وضعیت خرید</string>
    <string name="successfulPurchase">خرید موفق</string>
    <string name="title_activity_receipt">ReceiptActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_order_result">OrderResultActivity</string>
    <string name="information">information</string>
    <string name="image">image</string>
    <string name="es_favorite_title">لیست علاقه مندی ها خالی است</string>
    <string name="orderHistory_orderId">شناسه سفارش</string>
    <string name="payable_price">مبلغ</string>
</resources>