<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layoutDirection="rtl"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorOnPrimary">


        <com.amirreza.ecommercenikestore.feature_store.common.custom_view.NikeToolbar
            android:id="@+id/shippingToolbarTitle"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            NikeToolbarTitle="@string/shippingToolbarTitle" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingBottom="32dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ShippingListFirstNameEtl"
                style="@style/CheckoutTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/shippingListFirstNameEt"
                    style="@style/ShippingTextInputEditTextStyle"
                    android:maxLines="1"
                    android:text="amirreza"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/firstName"
                    android:imeOptions="actionNext" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ShippingListLastNameEtl"
                style="@style/CheckoutTextInputLayoutStyle"
                android:layout_width="match_parent"

                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/shippingListLastNameEt"
                    style="@style/ShippingTextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="lotfi"
                    android:hint="@string/lastName"
                    android:imeOptions="actionNext" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ShippingListZipCodeEtl"
                style="@style/CheckoutTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/shippingZipCodeNameEt"
                    style="@style/ShippingTextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:text="0987654321"
                    android:layout_height="wrap_content"
                    android:hint="@string/zipCode"
                    android:maxLines="1"
                    android:imeOptions="actionNext" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ShippingListMobileNumberEtl"
                style="@style/CheckoutTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/shippingListMobileNumberEt"
                    style="@style/ShippingTextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="09876543219"
                    android:hint="@string/phoneNumber"
                    android:imeOptions="actionNext" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ShippingListAddressEtl"
                style="@style/CheckoutTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/shippingListAddressEt"
                    style="@style/ShippingTextInputEditTextStyle"
                    android:drawableEnd="@drawable/ic_gps_24"
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:text="qwertqwertyuiopqwertyuiowertyuiopoooooo"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:imeOptions="actionDone" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/purchaseDetailLayout"
                android:orientation="vertical"
                android:layoutDirection="rtl"
                android:layout_marginTop="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?android:textColorSecondary"
                    android:paddingVertical="16dp"
                    android:padding="8dp"
                    android:textAppearance="@style/TextAppearance.ECommerceNikeStore.Headline6"
                    android:text="@string/purchaseDetail"/>
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="2dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:layout_height="wrap_content">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingBottom="12dp">

                        <TextView
                            android:id="@+id/titleTotalText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="12dp"
                            android:text="@string/totalPrice"
                            android:textAppearance="?textAppearanceBody1"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/titleShippingCostTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="24dp"
                            android:text="@string/shippingCost"
                            android:textAppearance="?textAppearanceBody1"
                            app:layout_constraintStart_toStartOf="@id/titleTotalText"
                            app:layout_constraintTop_toBottomOf="@id/titleTotalText" />

                        <TextView
                            android:id="@+id/titlePayableTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="24dp"
                            android:text="@string/payablePrice"
                            android:textAppearance="?textAppearanceBody1"
                            app:layout_constraintStart_toStartOf="@id/titleShippingCostTv"
                            app:layout_constraintTop_toBottomOf="@id/titleShippingCostTv" />

                        <TextView
                            android:id="@+id/totalPriceTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:fontFamily="@font/primary_bold"
                            android:textAppearance="?textAppearanceBody1"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="@id/titleTotalText"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@id/titleTotalText"
                            tools:text="13212312" />

                        <TextView
                            android:id="@+id/shippingCostTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/primary_bold"
                            android:textAppearance="?textAppearanceBody1"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="@id/titleShippingCostTv"
                            app:layout_constraintEnd_toEndOf="@id/totalPriceTV"
                            app:layout_constraintTop_toTopOf="@id/titleShippingCostTv"
                            tools:text="13212312" />

                        <TextView
                            android:id="@+id/payablePriceTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/primary_bold"
                            android:textAppearance="?textAppearanceBody1"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="@id/titlePayableTv"
                            app:layout_constraintEnd_toEndOf="@id/shippingCostTV"
                            app:layout_constraintTop_toTopOf="@id/titlePayableTv"
                            tools:text="13212312" />
                        <View
                            android:id="@+id/view2"
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:layout_marginTop="12dp"
                            android:background="?dividerColor"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/titleTotalText" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:background="?dividerColor"
                            android:layout_marginTop="12dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/titleShippingCostTv" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/codBtn"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/primary_bold"
                    android:textStyle="bold"
                    android:text="@string/cashOnDelivery" />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/onlinePaymentBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textStyle="bold"
                    android:fontFamily="@font/primary_bold"
                    android:text="@string/onlinePayment" />

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>